--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,8 @@ kornia==0.8.0
 insightface==0.7.3
 onnxruntime-gpu==1.21.0
 DeepCache==0.1.1
+runpod
+boto3
+cog
+requests
+google-cloud-storage==3.2.0
